--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin:0% 20%;
-
-   
+    margin:0% 20% 20% 7%;
+    justify-items: center;
+  
+ 
 }
 
 code {
